--- a/PaginaBunita/style.css
+++ b/PaginaBunita/style.css
@@ -1,4 +1,32 @@
-body{
+* {
+    margin: 0;
+    padding: 0%;    
+    box-sizing: border-box;
+    
+}
+    
+
+.TelaAzul {
+    background: Linear-gradient(rgb(40, 188, 229), rgb(63, 130, 167));
+    border-radius: 10%;
+    width: 1000px;
+    height: 300px;
+    margin: 0%;
+    position: absolute;
+    
+}
+div:before {
+        content: '';
+    position: absolute;
+    top: 0; right: 0;
+    border-top: 80px solid black;
+    border-left: 80px solid rgb(40, 188, 229);
+    width: 0;
+}
+
+
+
+body {
 
     background-color: black;
 
@@ -7,17 +35,17 @@ body{
 
 
 }
-h1{
-
+h1 {
+    text-align: center;
     font-size: 100px;
-    color: white;
+    color: rgb(55, 42, 42);
 
 }
 
-p   {
+p {
     
     text-align: center;
-    color: blanchedalmond;
+    color: rgb(67, 51, 26);
 
 
 
