--- a/PaginaBunita/style.css
+++ b/PaginaBunita/style.css
@@ -1,40 +1,68 @@
 * {
     margin: 0;
-    padding: 0%;    
+    padding: 0%;
     box-sizing: border-box;
-    
+
 }
-    
+
+
+.Quadro {
+    width: 100vw;
+    height: 50vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.LugarBnt {
+    background-image: url("LugarBnt.jfif");
+    width: 100vw;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;    
+}
+/*.robo{
+image-rendering: url("Robozin.jpg");    
+width: 100%;
+height: 100%;
+position: relative;
+z-index: 1;
+}*/
+
+
+
 
 .TelaAzul {
     background: Linear-gradient(rgb(40, 188, 229), rgb(63, 130, 167));
-    border-radius: 10%;
+    border-radius: 61px;
     width: 1000px;
     height: 300px;
     margin: 0%;
-    position: absolute;
-    
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 100px 2px grey;
+    margin-top: 20%;
+    z-index: 2;
 }
-div:before {
-        content: '';
-    position: absolute;
-    top: 0; right: 0;
-    border-top: 80px solid black;
-    border-left: 80px solid rgb(40, 188, 229);
-    width: 0;
-}
+
+
 
 
 
 body {
 
     background-color: black;
-
+    width: 100%;
+    height: 100%;
 
 
 
 
 }
+
 h1 {
     text-align: center;
     font-size: 100px;
@@ -43,7 +71,7 @@ h1 {
 }
 
 p {
-    
+
     text-align: center;
     color: rgb(67, 51, 26);
 
