--- a/PaginaBunita/style.css
+++ b/PaginaBunita/style.css
@@ -6,13 +6,22 @@
 }
 
 
-.Quadro {
-    width: 100vw;
-    height: 50vh;
-    display: flex;
+
+.FundoBranco {
+    top: 0px;
+    background: aliceblue;
+    border-radius: 1px;
+    width: 80vw;
+    height: 100vh;
+    margin-left: 10vw;
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 0px 100px 2px grey;
+    z-index: 2;
+    position: absolute;
+
+
 }
 
 .LugarBnt {
@@ -21,15 +30,9 @@
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;    
+    background-size: cover;
 }
-/*.robo{
-image-rendering: url("Robozin.jpg");    
-width: 100%;
-height: 100%;
-position: relative;
-z-index: 1;
-}*/
+
 
 
 
@@ -37,15 +40,15 @@ z-index: 1;
 .TelaAzul {
     background: Linear-gradient(rgb(40, 188, 229), rgb(63, 130, 167));
     border-radius: 61px;
-    width: 1000px;
+    width: 80%;
     height: 300px;
-    margin: 0%;
+    margin: auto;
+    margin-top: 100px;
     flex-direction: row;
     justify-content: center;
     align-items: center;
     box-shadow: 0px 0px 100px 2px grey;
-    margin-top: 20%;
-    z-index: 2;
+    z-index: 3;
 }
 
 
@@ -57,8 +60,6 @@ body {
     background-color: black;
     width: 100%;
     height: 100%;
-
-
 
 
 }
