--- a/PaginaTravicar/Travicar.css
+++ b/PaginaTravicar/Travicar.css
@@ -2,20 +2,102 @@
     margin: 0;
     padding: 0%;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 body{
 
-
-background: black;
+position: absolute;
+background: lightblue;
 height: 100vh;
 width: 100vw;
 
 
 }
 
+
 .Start{
+    align-items: auto;
     height: 20vh;
     width: 100vw;
     background: aliceblue;
+    border-radius: 100px;
+    box-shadow: 0px 0px 10px 2px BLACK;
+
+}
+.BtnHome{
+    margin-left: 2vw;
+    margin-top: 2vh ;
+    height: 15vh;
+    width: 15vw;
+    border-width: 0px;
+    border-radius: 100px;    
+    background: rgb(193, 224, 121);
+
+}
+
+.BtnPortal {
+    margin-left: 2vw;
+    margin-top: 2vh ;
+    height: 15vh;
+    width: 15vw;
+    border-width: 0px;
+    border-radius: 100px;    
+    background: rgb(193, 224, 121);
+
+}
+.Logo{
+
+    
+    margin-left: 2vw;
+    height: 15vh;
+    width: 45vw;
+    border-radius: 100px;    
+    background: rgb(253, 253, 253);
+    background-image: url("aLogoTravicar.jfif");
+    background-size: 45vh;
+    background-repeat: no-repeat;
+    background-position: 11px;
+}
+
+.Banner{
+    margin-top: 1vh;
+    width: 100vw;
+    height: 100vh;
+    max-width: 100vw;
+    background: url("Banner.jpg");
+    background-size: 100%;
+    background-repeat: no-repeat;
+
+}
+
+.Portal{
+width: 80vw;
+height: 30vh;
+background: burlywood;
+border-radius: 30px;
+background: url("aviao.jpg");
+background-position: center;
+background-repeat: no-repeat;
+background-size: 100%;
+
+
+}
+
+.Velo{
+    width: 80vw;
+    height: 10vh;
+    display: flex;
+    justify-content: center;
+}
+.TextoBr{
+    color: #FFFFFF !important;
+    font-size: 2vw;
+}
+
+.AbFolder{
+
+    width: 30px;
+    height: 30px;
+    border-radius: 10px;
 }
