--- a/PaginaTravicar/Travicar.css
+++ b/PaginaTravicar/Travicar.css
@@ -1,22 +1,22 @@
-*{
+* {
     margin: 0;
     padding: 0%;
     box-sizing: border-box;
     overflow-x: hidden;
 }
 
-body{
+body {
 
-position: absolute;
-background: lightblue;
-height: 100vh;
-width: 100vw;
+    position: absolute;
+    background: lightblue;
+    height: 100vh;
+    width: 100vw;
 
 
 }
 
 
-.Start{
+.Start {
     align-items: auto;
     height: 20vh;
     width: 100vw;
@@ -25,34 +25,36 @@ width: 100vw;
     box-shadow: 0px 0px 10px 2px BLACK;
 
 }
-.BtnHome{
+
+.BtnHome {
     margin-left: 2vw;
-    margin-top: 2vh ;
+    margin-top: 2vh;
     height: 15vh;
     width: 15vw;
     border-width: 0px;
-    border-radius: 100px;    
+    border-radius: 100px;
     background: rgb(193, 224, 121);
 
 }
 
 .BtnPortal {
     margin-left: 2vw;
-    margin-top: 2vh ;
+    margin-top: 2vh;
     height: 15vh;
     width: 15vw;
     border-width: 0px;
-    border-radius: 100px;    
+    border-radius: 100px;
     background: rgb(193, 224, 121);
 
 }
-.Logo{
 
-    
+.Logo {
+
+
     margin-left: 2vw;
     height: 15vh;
     width: 45vw;
-    border-radius: 100px;    
+    border-radius: 100px;
     background: rgb(253, 253, 253);
     background-image: url("aLogoTravicar.jfif");
     background-size: 45vh;
@@ -60,7 +62,7 @@ width: 100vw;
     background-position: 11px;
 }
 
-.Banner{
+.Banner {
     margin-top: 1vh;
     width: 100vw;
     height: 100vh;
@@ -71,33 +73,43 @@ width: 100vw;
 
 }
 
-.Portal{
-width: 80vw;
-height: 30vh;
-background: burlywood;
-border-radius: 30px;
-background: url("aviao.jpg");
-background-position: center;
-background-repeat: no-repeat;
-background-size: 100%;
+.Portal {
+    width: 80vw;
+    height: 30vh;
+    background: burlywood;
+    border-radius: 30px;
+    background: url("aviao.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
 
 
 }
 
-.Velo{
+.Velo {
     width: 80vw;
     height: 10vh;
     display: flex;
     justify-content: center;
 }
-.TextoBr{
+
+.TextoBr {
     color: #FFFFFF !important;
     font-size: 2vw;
 }
 
-.AbFolder{
-
-    width: 30px;
-    height: 30px;
+.AbFolder {
+    background: orange;
+    width: 4vw;
+    height: 2vh;
     border-radius: 10px;
+    
+}
+
+.AbYoutube {
+    background: orange;
+    width: 4vw;
+    height: 2vh;
+    border-radius: 10px;
+
 }
