--- a/Venda/Style.css
+++ b/Venda/Style.css
@@ -20,23 +20,92 @@ body {
     height: 17vh;
     background: rgb(79, 74, 74);
     overflow: hidden;
+    display: inline-block;
 
 }
 
 .Bloa {
-    
-    margin-top: 0.5vh;
-    border-radius: 50px;
-    margin-left: 3vw;
-    width: 17vw;
-    height: 90%;
-    background: rgb(255, 255, 255);
-    overflow: hidden;
-}
-.Logo {
-
     margin-left: 3vw;
     height: 17vh;
+    width: 17vh;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
     overflow: hidden;
-    align-items: center;
+    text-align: center;
+    display: inline-block;
+    position: absolute;
+}
+
+.Logo {
+    padding-top: 2vh;
+    height: 14vh;
+    overflow: hidden;
+
+}
+.TituloLoja{
+
+    width: 10022222vw;
+    height: 17vh;
+    background-color: rgb(109, 102, 102);
+    position: relative;
+    margin-left: 25vh;
+
+}
+.EstiloTit{
+    overflow: hidden;
+    text-align: center;
+    margin-left: 3vw;
+    margin-top: 3vh;
+    width: 75vw;
+    height: 12vh;
+    font-size: 9vh;
+    background-color: burlywood;
+    font-family: 'Courier New', Courier, monospace;
+    border-radius: 20px;
+    text-align: center;
+    vertical-align: middle;
+    color: rgb(79, 74, 74);
+}
+.Sobre{
+
+    width: 100vw;
+    height: 700px;
+
+}
+
+.SobreTit{
+
+    text-align: center;
+    margin-top: 7vh;
+    font-size: 3vw;
+    margin-left: 30vw;
+    margin-right: 30vw;
+    color: black;
+    background-color: rgb(228, 222, 222);
+    border-radius: 100px;
+
+}
+.espSob{
+
+
+    text-align: center;
+    margin-top: 7vh;
+    font-size: 2vw;
+    margin-left: 30vw;
+    margin-right: 20vw;
+
+    color: black;
+    background: rgb(216, 216, 206);
+    width: 40vw;
+    height: 11vh;
+    border-radius: 30px;
+    box-shadow: 0px 0px 10px 2px BLACK;
+}
+.espaça{
+
+
+
+
+
 }
