--- a/Venda/Style.css
+++ b/Venda/Style.css
@@ -12,8 +12,8 @@ body {
     margin: 0px !important;
     font-weight: 300;
     font-size: 17px;
-    
-}   
+
+}
 
 .Home {
 
@@ -22,6 +22,7 @@ body {
     background: rgb(79, 74, 74);
     overflow: hidden;
     display: inline-block;
+    position: fixed;
 
 }
 
@@ -44,7 +45,8 @@ body {
     overflow: hidden;
 
 }
-.TituloLoja{
+
+.TituloLoja {
 
     width: 10022222vw;
     height: 17vh;
@@ -53,7 +55,8 @@ body {
     margin-left: 25vh;
 
 }
-.EstiloTit{
+
+.EstiloTit {
     overflow: hidden;
     text-align: center;
     margin-left: 3vw;
@@ -68,14 +71,16 @@ body {
     vertical-align: middle;
     color: rgb(79, 74, 74);
 }
-.Sobre{
+
+.Sobre {
 
     width: 100vw;
     height: 40vh;
+    margin-top: 111px;
 
 }
 
-.SobreTit{
+.SobreTit {
 
     text-align: center;
     margin-top: 7vh;
@@ -87,7 +92,8 @@ body {
     border-radius: 100px;
 
 }
-.espSob{
+
+.espSob {
 
     overflow: hidden;
     text-align: center;
@@ -103,7 +109,8 @@ body {
     border-radius: 5px;
     box-shadow: 0px 2px 10px 0px BLACK;
 }
-.espaça{
+
+.espaça {
 
     margin-top: 10px;
     margin-left: 10vw;
@@ -113,75 +120,154 @@ body {
 
 }
 
-.produtos{
+.produtos {
 
-width: 85vw;
-height: 60vh;
-background: local;
-background: grey;
-margin: 10vw;
-border-radius: 15px;
-overflow: hidden;
-margin-left: 7vw;
+    width: 85vw;
+    height: 60vh;
+    background: local;
+    background: grey;
+    margin: 10vw;
+    border-radius: 15px;
+    overflow: hidden;
+    margin-left: 7vw;
 
 }
 
-.produto123{
+.produto123 {
     display: flex;
     justify-content: center;
     width: 20%;
     height: 80%;
-    background: rgb(80, 80, 80);
+    background: rgb(255, 255, 255);
     border-radius: 15px;
 }
-#produto1{
+
+#produto1 {
 
     margin-left: 5vw;
     margin-top: 5vh;
 
 }
 
-#produto2{
-    
+#produto2 {
+
     margin-left: 40%;
     margin-top: -48vh;
 
 }
 
-#produto3{
+#produto3 {
 
     margin-left: 75%;
     margin-top: -48vh;
 
 }
 
-.armas{
+.armas {
     width: 80%;
     height: 30%;
     margin-top: 1vh;
-    background: white;
+    background: rgb(255, 255, 255);
     border-radius: 10px;
     border-style: solid;
-    border-width:10px;
-    border-color:white ;
+    border-width: 10px;
+    border-color: grey;
 }
 
 
 
-#preco1{
-
-width: 80%;
-
-/* NÂO ESQUECER DE POR A "DIV" EM BAIXO */
+.precos {
+    height: 23%;
+    width: 15%;
+    background: rgb(255, 255, 255);
+    position: absolute;
+    margin-top: 150px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: black;
+    justify-content: center;
+    overflow: hidden;
 
 }
-#preco2{
 
-
+.h1 {
+    font-size: 150%;
+    color: black;
 
 }
-#preco3{
+
+.p1 {
+    position: absolute;
+    font-size: 100%;
+    color: black;
+    right: 10px;
+
+}
+
+.p2 {
+    position: absolute;
+    font-size: 70%;
+    color: rgb(46, 44, 44);
+    right: 10px;
+
+}
+
+.btn {
+    appearance: none;
+    background-color: #2ea44f;
+    border: 1px solid rgba(27, 31, 35, .15);
+    border-radius: 6px;
+    box-shadow: rgba(27, 31, 35, .1) 0 1px 0;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    padding: 6px 16px;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    height: 4.5vw;
+    width: 13vw;
+    margin: 10px;
+    overflow: hidden;
+}
+
+.button-3:focus:not(:focus-visible):not(.focus-visible) {
+    box-shadow: none;
+    outline: none;
+}
+
+.button-3:hover {
+    background-color: #2c974b;
+}
+
+.button-3:focus {
+    box-shadow: rgba(46, 164, 79, .4) 0 0 0 3px;
+    outline: none;
+}
+
+.button-3:disabled {
+    background-color: #94d3a2;
+    border-color: rgba(27, 31, 35, .1);
+    color: rgba(255, 255, 255, .8);
+    cursor: default;
+}
+
+.button-3:active {
+    background-color: #298e46;
+    box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+}
 
 
+#fundo {
 
+    width: 100vw;
+    height: 40vh;
+    background-color: rgb(35, 34, 34);
 }
