--- a/2/style.css
+++ b/2/style.css
@@ -1,76 +1,109 @@
-body{
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 
-    background:whitesmoke;
+body {
+
+    background: whitesmoke;
+    font-family: 'Poppins', sans-serif;
 
 }
 
-header{
+header {
 
     width: 100vw;
     height: 300px;
     background: grey;
-    padding:20px 0;
+    padding: 20px 0;
 }
-.caixa{
+
+.caixa {
     position: relative;
     width: 90vw;
     margin: 0 auto;
 }
-nav{
+
+.btnHome {
+
+    border: 1px solid transparent;
+    
+    padding: 20px;
+    border-radius: 10px;
+    font-weight: 900;
+    font-size: large;
+    background: rgba(92, 92, 92, 0.719);
+    color: #d8d8da;
+    transition: background .3s;
+}
+
+.btnHome:hover {
+
+    
+    border: 1px solid transparent;
+    background: #d8d8da;
+    color: grey;
+
+
+
+}
+
+nav {
 
     position: absolute;
     top: 140px;
     right: 0px;
 
 }
-nav li{     
+
+nav li {
 
     display: inline;
     margin: 0 0 0 15px;
 
 }
 
-li a{
+li a {
 
     text-decoration: none;
     text-transform: uppercase;
     color: #333399;
     font-weight: bold;
-    font-size:large;
+    font-size: large;
 }
 
-li a:hover{
+li a:hover {
 
     text-decoration: underline;
     color: orange;
 }
 
 
-#logo{
+#logo {
 
     width: 300px;
 }
 
-#glock{
+#glock {
 
 
     width: 150px;
 }
-#m4{
+
+#m4 {
 
     width: 250px;
 }
-#revolver{
+
+#revolver {
 
     width: 200px;
 }
 
-.produtos{
+.produtos {
     width: 100vw;
     margin: 60px auto;
     text-align: center;
 }
-.produtos li{
+
+.produtos li {
 
     display: inline-block;
     margin: 10PX;
@@ -82,48 +115,48 @@ li a:hover{
 
 }
 
-.name{
+.name {
 
     font-size: large;
-    font-weight:900;
+    font-weight: 900;
     color: black;
     text-transform: uppercase;
     margin-bottom: 10px;
 }
 
-.precoG{
+.precoG {
 
     font-size: large;
-    font-weight:900;
+    font-weight: 900;
     color: black;
 }
 
 
-.precoP{
+.precoP {
 
     font-size: smaller;
-    font-weight:550;
+    font-weight: 550;
     color: rgb(110, 108, 108);
 
 }
 
-.comprar{
+.comprar {
 
     margin-top: 30px;
-position: relative;
-padding: 40px;
-background: black;
+    position: relative;
+    padding: 40px;
+    background: rgb(42, 143, 46);
     color: white;
     padding: 1.5rem;
     border-radius: 100px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    transition: background .99s;
+    transition: background .2s;
 }
 
-.comprar:hover{
+.comprar:hover {
 
-    background-color: rgb(0, 0, 100, .99);
+    background-color: rgba(42, 103, 46);
     cursor: pointer;
 
 
