--- a/Gunfight/Css/style.css
+++ b/Gunfight/Css/style.css
@@ -167,7 +167,7 @@ footer {
 text-align: center;
 width: 100vw;
 height: 50vh;
-background: url(Imagens/bg.jpg);
+background: url(../Images/bg.jpg);
 padding: 40px 0;
 
 }
