--- a/Gunfight/Css/styleHome.css
+++ b/Gunfight/Css/styleHome.css
@@ -5,6 +5,7 @@ body {
     background: whitesmoke;
     font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
+    width: 100vw;
 }
 
 header {
@@ -86,15 +87,22 @@ li a:hover {
 #imagemHome {
 
     width: 100vw;
+}
 
+.container-about {
+    background-color: whitesmoke;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
 }
 
 .about {
 
     text-align: center;
     width: 80vw;
-    margin: 20px auto;
-
+    padding: 20px auto;
+    background: whitesmoke;
+    margin: 0 auto;
 
 
 }
@@ -106,23 +114,95 @@ h1 {
 
 }
 
-.text-about p1{
+.text-about p1 {
 
     font-size: 22px;
 
 
 }
-.text-about p2{
+
+.text-about p2 {
 
     font-size: 18px;
 
 }
-strong{
+
+strong {
 
     background: rgb(78, 78, 78);
     border-radius: 5px;
     color: #d8d8da;
 }
+
+.localizacao {
+    position: relative;
+    background: linear-gradient(to bottom, whitesmoke, grey);
+    width: 100vw;
+    text-align: center;
+    align-items: center;
+
+}
+
+.localizacao h1 {
+
+    padding: 20px 0;
+}
+
+.localizacao p {
+
+    margin: 20px 0;
+}
+
+#mapa {
+
+    margin: 20px 0;
+    width: 90vw;
+    height: 400px;
+}
+
+.beneficios {
+
+    background: grey;
+    text-align: center;
+    align-items: center;
+    inline-size: 100%;
+    /* border: 3px solid black; */
+}
+
+.beneficios h1 {
+
+    padding: 20px 0;
+}
+
+.beneficios ul {
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0 10px;
+    /* border: 3px solid black; */
+    padding: 40px 10px;
+    list-style-type: disc;
+
+}
+
+.lista {
+    vertical-align: middle;
+    display: inline-block;
+}
+
+.imagem-lista {
+
+    vertical-align: middle;
+    display: inline-block;
+}
+
+.video {
+
+    background: grey;
+    align-items: center;
+    text-align: center;
+    padding: 30px 0;
+}
+
 
 
 /* ------------------------------AQUI Ó--------------------------------- */
@@ -143,3 +223,39 @@ footer p3 {
     font-weight: 10;
     color: rgb(213, 213, 213);
 }
+
+#video1{
+
+    width: 50vw;
+    height: 30vw;
+}
+
+
+/* --------------------PARTE PRA FAZER FUNCIONAR EM CELL--------------------------- */
+
+@media screen and (max-width: 450px) {
+    header, .imagemHome, .container-about, .localizacao, .mapa, .beneficios, .video {
+        width: auto;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    #logo {
+        width: 80%;
+    }
+}
+@media screen and (max-width: 450px) {
+    .localizacao h1{
+        font-size: 25px;
+    }
+}
+@media screen and (max-width: 250px) {
+    .localizacao h1{
+        font-size: 20px;
+    }
+}
+
+
+
+
+/* --------------------PARTE PRA FAZER FUNCIONAR EM CELL--------------------------- */
